--- a/Homepage Files/SimplyDeliciousHomepage.html
+++ b/Homepage Files/SimplyDeliciousHomepage.html
@@ -29,13 +29,12 @@
       </div>
     </div>
 
-    <!-- Profile link -->
     <div class="header-profile">
-      <a href="profile.html">Profile Page</a>
-    </div>
-  </div>
+  <a href="profile.html">
+    <img src="profile-image.png" alt="Profile" class="profile-pic">
+  </a>
+</div>
 </header>
-
 
 <!-- Recipe Highlight -->
 <div class="recipe-highlight container">
