--- a/Homepage Files/SimplyDeliciousHomepage.html
+++ b/Homepage Files/SimplyDeliciousHomepage.html
@@ -24,10 +24,12 @@
       <a href="pages.html">Pages</a>
       <!-- The search bar can be grouped together -->
       <div class="search-container">
-        <input type="search" placeholder="Search...">
-        <button type="submit">Search</button>
-      </div>
-    </div>
+        <button id="searchBtn" class="search-btn">
+            <i class="fas fa-search"></i>
+        </button>
+        <input type="text" id="searchInput" class="search-input" placeholder="Search...">
+    </div>     
+  </div>
 
     <div class="header-profile">
   <a href="profile.html">
