--- a/Homepage Files/SimplyDeliciousHomepage.html
+++ b/Homepage Files/SimplyDeliciousHomepage.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet"/>
 </head>
 
 <header>
@@ -31,12 +32,14 @@
     </div>     
   </div>
 
-    <div class="header-profile">
+    <!-- Profile link -->
+<div class="header-profile">
   <a href="profile.html">
     <img src="profile-image.png" alt="Profile" class="profile-pic">
   </a>
 </div>
 </header>
+
 
 <!-- Recipe Highlight -->
 <div class="recipe-highlight container">
@@ -51,7 +54,7 @@
         <div class="recipe-highlight-percentage">85% would make this again</div>
         <h2 class="recipe-highlight-title">Mighty Super Cheesecake</h2>
         <p class="recipe-highlight-description">Look no further for a creamy and ultra smooth classic cheesecake recipe! No one can deny its simple decadence.</p>
-        <!-- Add your button or link for the recipe details here -->
+        <!-- Add the button or link for the recipe details here -->
       </div>
     </div>
   </div>
@@ -61,6 +64,7 @@
   
 <body>
     
-    
+
+<script src="script.js"></script>
 </body>
 </html>
