Update and rename SimplyDeliciousHomepage.html to index.html

--- a/Homepage Files/index.html
+++ b/Homepage Files/index.html
@@ -14,7 +14,7 @@
   <div class="header">
     <!-- Logo -->
     <div class="header-logo">
-      <a href="SimplyDeliciousHomepage.html">
+      <a href="index.html">
         <img src="SimplyDeliciousLogo.png" alt="SimplyDelicious Logo">
       </a>
     </div>
